--- a/第7章 处理文本数据.ipynb
+++ b/第7章 处理文本数据.ipynb
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![bag_of_words](images/bag_of_words.png)\n",
+    "![bag_of_words](bag_of_words.png)\n",
     "<br/><center><font size=\"5\">图7-1 词袋处理过程</font></center>"
    ]
   },
